components/Speech/styles.module.css
@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');

.speechAlign {
  display: flex;
  align-items: center;
  justify-content: space-around;
  margin-top: 5rem;
}

.me {
  animation: fromBottomToPosition 3s;
}

@keyframes fromBottomToPosition {
  0% {
    top: 100rem;
  }
  80% {
    top: -5rem;
  }
  90% {
    top: 2rem;
  }
  100% {
    top: 0;
  }
}

.speechBalloon {
  background-image: url('../../public/speech-balloon.png');
  width: 700px;
  height: 375px;
  display: flex;
  justify-content: center;
}

.speechBalloon button {
  width: 600px;
  height: 250px;
  border: none;
  background-color: transparent;
  font-family: 'Press Start 2P';
  font-size: 1.5rem;
  text-align: left;
  outline: none;
  box-shadow: none;
}

